baml_language/crates/baml_tests/snapshots/compiles/bigint_literal/baml_tests__compiles__bigint_literal__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.GetBigint() -> bigint  [expr] {
  { let x: bigint = 42n } x
}
function user.GetLargeBigint() -> bigint  [expr] {
  {  } 99999999999999999999n
}
function user.GetNegativeBigint() -> bigint  [expr] {
  {  } Neg 7n
}
