baml_language/crates/baml_tests/snapshots/compiles/bigint_literal/baml_tests__compiles__bigint_literal__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.GetBigint() -> bigint {
    // Locals:
    let _0: bigint // _0 // return
    let _1: bigint // x

    bb0: {
        _1 = const 42n;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.GetLargeBigint() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 99999999999999999999n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.GetNegativeBigint() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const -7n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
