baml_language/crates/baml_tests/snapshots/compiles/bigint_literal/baml_tests__compiles__bigint_literal__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.GetBigint() -> bigint throws never {
  { : bigint
    let x: bigint = 42n : 42n -> bigint
    x : bigint
  }
}
function user.GetLargeBigint() -> bigint throws never {
  { : 99999999999999999999n
    99999999999999999999n : 99999999999999999999n
  }
}
function user.GetNegativeBigint() -> bigint throws never {
  { : -7n
    Neg 7n : -7n
  }
}
